myteo/test/parser/ast/pattern/malformed_error.exp
ERROR: test/parser/ast/pattern/malformed_error.myte:4:6 Unexpected token "1", expected start of pattern
 4 |   val 1 = 1;
   |       ^